--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="stylesheets/style.css" />
     <script src="javascripts/jquery-3.7.1.js" charset="utf-8"></script>
     <script src="javascripts/sidebar.js" charset="utf-8"></script>
-    <meta property="og:title" content="Мэрилин Монро" />
+    <meta property="og:title" content="Дом Наркомфина" />
     <meta
       property="og:description"
-      content="Американская киноактриса и певица"
+      content="Проект для изучения основ веб-верстки"
     />
     <meta
       property="og:image"
-      content="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Marilyn_Monroe_-_publicity.JPG/210px-Marilyn_Monroe_-_publicity.JPG"
+      content="https://raw.githubusercontent.com/klavamalt/wikimedium/refs/heads/main/images/narkomfin.jpg"
     />
-    <meta property="og:type" content="profile" />
-    <meta
+    <meta property="og:type" content="website" />
+    <!-- <meta
       property="og:url"
       content="https://ru.wikipedia.org/wiki/Мэрилин_Монро"
-    />
+    /> -->
   </head>
   <body>
     <nav class="menubar">
