--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
       content="https://raw.githubusercontent.com/klavamalt/wikimedium/refs/heads/main/images/narkomfin.jpg"
     />
     <meta property="og:type" content="website" />
-    <!-- <meta
-      property="og:url"
-      content="https://ru.wikipedia.org/wiki/Мэрилин_Монро"
-    /> -->
+    <meta property="og:url" content="https://klavamalt.github.io/wikimedium/" />
   </head>
   <body>
     <nav class="menubar">
