--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://klavamalt.github.io/wikimedium/" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
     <nav class="menubar">
